# rsj_seminar_navigation

./: CMakeLists.txt  package.xml
config/: costmap_common.yaml  costmap_local.yaml  move_base.yaml  planner_local.yaml
config/rviz/: navigation.rviz
launch/: mapping.launch  navigation.launch
