<?xml version="1.0"?>
<package>
  <name>rsj_seminar_navigation</name>
  <version>0.1.0</version>
  <description>Tutorial of navigation package for RSJ seminar 99</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ypspur_ros</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>ypspur_ros</run_depend>
  <run_depend>tf</run_depend>
</package>
